<resources>
    <string name="app_name">RPL_Prak</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="my_teams_string">My Teams</string>
    <string name="age___19_address___gulon__jebres__surakarta_hardskill___java__php__laravel_softskill___public_speaking__teamwork__time_management_string">Age          : 19Address  : Gulon, Jebres, SurakartaHardskill : Java, PHP, LaravelSoftskill   : Public Speaking, Teamwork, Time  Management</string>
    <string name="d_3_teknik_informatika_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_string">Universitas Sebelas Maret</string>
    <string name="elvin_kukuh_n_string">Elvin Kukuh N</string>
    <string name="project_manager_string">Project Manager</string>
    <string name="description_string">Description</string>
    <string name="my_teams_ek1_string">My Teams</string>
    <string name="age___19_address___kentingan__jebres__surakarta_hardskill___java__php__laravel_softskill___public_speaking__teamwork__time_management_string">Age          : 19Address  : Kentingan, Jebres, SurakartaHardskill : Java, PHP, LaravelSoftskill   : Public Speaking, Teamwork, Time  Management</string>
    <string name="d_3_teknik_informatika_ek1_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek1_string">Universitas Sebelas Maret</string>
    <string name="irvan_alvian_adi_n_string">Irvan Alvian Adi N</string>
    <string name="project_manager_ek1_string">Project Manager</string>
    <string name="description_ek1_string">Description</string>
    <string name="my_teams_ek2_string">My Teams</string>
    <string name="age___19_address___gulon__jebres__surakarta_hardskill___java__php__laravel_softskill___public_speaking__teamwork__time_management_ek1_string">Age          : 19Address  : Gulon, Jebres, SurakartaHardskill : Java, PHP, LaravelSoftskill   : Public Speaking, Teamwork, Time  Management</string>
    <string name="d_3_teknik_informatika_ek2_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek2_string">Universitas Sebelas Maret</string>
    <string name="muhamad_faris_r_string">Muhamad Faris R</string>
    <string name="project_manager_ek2_string">Project Manager</string>
    <string name="description_ek2_string">Description</string>
    <string name="my_teams_ek3_string">My Teams</string>
    <string name="age___19_address___gulon__jebres__surakarta_hardskill___java__php__laravel_softskill___public_speaking__teamwork__time_management_ek2_string">Age          : 19Address  : Gulon, Jebres, SurakartaHardskill : Java, PHP, LaravelSoftskill   : Public Speaking, Teamwork, Time  Management</string>
    <string name="d_3_teknik_informatika_ek3_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek3_string">Universitas Sebelas Maret</string>
    <string name="farhan_arif_s_string">Farhan Arif S</string>
    <string name="project_manager_ek3_string">Project Manager</string>
    <string name="description_ek3_string">Description</string>
    <string name="my_teams_ek4_string">My Teams</string>
    <string name="age___19_address___tulungagung_hardskill___java__php__laravel_softskill___public_speaking__teamwork__time_management_string">Age          : 19Address  : TulungagungHardskill : Java, PHP, LaravelSoftskill   : Public Speaking, Teamwork, Time  Management</string>
    <string name="d_3_teknik_informatika_ek4_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek4_string">Universitas Sebelas Maret</string>
    <string name="mohammad_jose_r_string">Mohammad Jose R</string>
    <string name="project_manager_ek4_string">Project Manager</string>
    <string name="description_ek4_string">Description</string>
    <string name="my_teams_ek5_string">My Teams</string>
    <string name="age___19_address___sapen__mojolaban__sukoharjo_hardskill___java__php__laravel__python__html_softskill___public_speaking__teamwork__time_management_string">Age          : 20Address  : Sapen, Mojolaban, SukoharjoHardskill : Java, PHP, Laravel, Python, HTMLSoftskill   : Public Speaking, Teamwork, Time  Management</string>
    <string name="d_3_teknik_informatika_ek5_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek5_string">Universitas Sebelas Maret</string>
    <string name="imam_abdilah_p_string">Imam Abdilah P</string>
    <string name="project_manager_ek5_string">Project Manager</string>
    <string name="description_ek5_string">Description</string>
    <string name="my_teams_ek6_string">My Teams</string>
    <string name="d_3_teknik_informatika_ek6_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek6_string">Universitas Sebelas Maret</string>
    <string name="elvin_kukuh_n_ek1_string">Elvin Kukuh N</string>
    <string name="project_manager_ek6_string">Project Manager</string>
    <string name="d_3_teknik_informatika_ek7_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek7_string">Universitas Sebelas Maret</string>
    <string name="irvan_alvian_adi_n_ek1_string">Irvan Alvian Adi N</string>
    <string name="project_manager_ek7_string">Project Manager</string>
    <string name="d_3_teknik_informatika_ek8_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek8_string">Universitas Sebelas Maret</string>
    <string name="farhan_arif_s_ek1_string">Farhan Arif S</string>
    <string name="project_manager_ek8_string">Project Manager</string>
    <string name="d_3_teknik_informatika_ek9_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek9_string">Universitas Sebelas Maret</string>
    <string name="mohammad_jose_r_ek1_string">Mohammad Jose R</string>
    <string name="project_manager_ek9_string">Project Manager</string>
    <string name="d_3_teknik_informatika_ek10_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek10_string">Universitas Sebelas Maret</string>
    <string name="imam_abdilah_p_ek1_string">Imam Abdilah P</string>
    <string name="project_manager_ek10_string">Project Manager</string>
    <string name="d_3_teknik_informatika_ek11_string">D-3 Teknik Informatika</string>
    <string name="universitas_sebelas_maret_ek11_string">Universitas Sebelas Maret</string>
    <string name="muhamad_faris_rafi_string">Muhamad Faris Rafi</string>
    <string name="project_manager_ek11_string">Project Manager</string>
    <string name="rectangle_3">rectangle_3</string>
    <string name="rectangle_3_ek5">rectangle_3_ek5</string>
    <string name="vector">vector</string>
    <string name="ellipse_11_ek6">ellipse_11_ek6</string>
    <string name="ellipse_7_ek6">ellipse_7_ek6</string>
    <string name="whatsapp_image_2022_07_26_at_10_13_1_ek6">whatsapp_image_2022_07_26_at_10_13_1_ek6</string>
    <string name="whatsapp_image_2022_07_26_at_10_13_1_ek7">whatsapp_image_2022_07_26_at_10_13_1_ek7</string>
    <string name="rectangle_3_ek2">rectangle_3_ek2</string>
    <string name="rectangle_3_ek4">rectangle_3_ek4</string>
    <string name="whatsapp_image_2022_07_26_at_10_13_1_ek8">whatsapp_image_2022_07_26_at_10_13_1_ek8</string>
    <string name="whatsapp_image_2022_07_26_at_10_13_1_ek10">whatsapp_image_2022_07_26_at_10_13_1_ek10</string>
    <string name="whatsapp_image_2022_07_26_at_10_13_1_ek9">whatsapp_image_2022_07_26_at_10_13_1_ek9</string>
    <string name="whatsapp_image_2022_07_26_at_10_13_1_ek11">whatsapp_image_2022_07_26_at_10_13_1_ek11</string>
    <string name="rectangle_3_ek3">rectangle_3_ek3</string>
    <string name="rectangle_3_ek1">rectangle_3_ek1</string>
    <string name="back">_back</string>
    <string name="hardskill">Hardskill :</string>
    <string name="age">Age :</string>
    <string name="softskill">Softskill :</string>
    <string name="address">Address :</string>
    <string name="ellipse_7">ellipse_7</string>
    <string name="ellipse_11">ellipse_11</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="frontend_developer">Frontend Developer</string>
    <string name="backend_developer">Backend Developer</string>
    <string name="gulon_jebres_surakarta">Gulon, Jebres, Surakarta</string>
    <string name="java_php_laravel">Java, PHP, Laravel</string>
    <string name="public_speaking_teamwork_time_management">Public Speaking, Teamwork, Time Management</string>
    <string name="whatsapp_image_2022_07_26_at_10_13_1">whatsapp_image_2022_07_26_at_10_13_1</string>
    <string name="php_java_python_html_js">PHP, Java, Python, HTML, JS</string>
    <string name="sapen_mojolaban_sukoharjo">Sapen, Mojolaban, Sukoharjo</string>
    <string name="tulungagung">Boyolangu, Tulungagung, Tulungagung</string>
    <string name="hardskill_jose">Python, PHP, Laravel</string>
    <string name="jose">jose</string>
    <string name="Farhan">Farhan Arif Setiawan</string>
    <string name="AlamatFarhan">Laweyan, Surakarta</string>
    <string name="hardskill_farhan">Python, HTML, Java, Laravel</string>
</resources>